--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -55,7 +55,7 @@
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="Async Pipe" [toggleable]="true">
-      <pre>{{myObservableTimer | async}}</pre>
+      <!-- <pre>{{myObservableTimer | async}}</pre> -->
 
       <pre>{{promiseValue | async}}</pre>
     </p-fieldset>
